adding permissions, menus, sessions and activity logs